
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/block/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/entity/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/event/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/server/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/util/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/world/")
