
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Cancellable")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Cloneable")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Event")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Events")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Exclusive")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/RAII")
